--- a/library-player/build.gradle
+++ b/library-player/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     api 'com.shuyu:gsyVideoPlayer-java:6.0.3'
     //noinspection GradleDependency
     implementation 'com.shuyu:gsyVideoPlayer-armv7a:6.0.3'
+    implementation 'com.shuyu:gsyVideoPlayer-x86:6.0.3'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
